--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Data Analyst &amp; Data Scientist </h3>
           <p class="fst-italic">
-            Tech enthusiast currently aspiring to become a successful Data Analyst leveraging my expertise in data science, data analysis, machine learning, and problem-solving to contribute to the success of an organization
+            Tech enthusiast currently aspiring to become a successful Data Scientist leveraging my expertise in data science, data analysis, machine learning, and problem-solving to contribute to the success of an organization
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -187,7 +187,7 @@
 
       <div class="section-title">
         <h2>Resume</h2>
-        <p>Check My Resume</p>
+        <p>My Resume</p>
       </div>
 
       <div class="row">
@@ -195,7 +195,7 @@
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
             <h4>Marwa Osman Korane</h4>
-            <p><em>Tech enthusiast currently aspiring to become a successful Data Analyst leveraging my expertise in data science, data analysis, machine learning, and problem-solving to contribute to the success of an organization</em></p>
+            <p><em>Tech enthusiast deeply immersed in the dynamic fields of data science, artificial intelligence, and machine learning. Leveraging expertise in data analysis and problem-solving, I am committed to contributing to the success of organizations by transforming data into actionable insights and driving innovation through AI and machine learning.</em></p>
             <p>
             <ul>
               <li>Nairobi, Kenya</li>
